// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reef Detail Page should render with given state from Redux store: snapshot-with-data 1`] = `
<div>
  <mock-appbar
    classname="NavBar-appBar-112"
    color="primary"
    position="static"
  >
    <mock-toolbar
      classname="NavBar-toolbar-115"
    >
      <mock-drawer
        anchor="left"
        classes="[object Object]"
        open="false"
      >
        <mock-iconbutton
          style="align-self: flex-end; margin-right: 5px; margin-top: 5px; color: white;"
        >
          <clear />
        </mock-iconbutton>
        <mock-link
          href="/"
          style="margin: 1rem 2rem 2rem; font-size: 1rem; color: white;"
        >
          HOME
        </mock-link>
        <mock-link
          href="/buoy"
          style="margin: 1rem 2rem 2rem; font-size: 1rem; color: white;"
        >
          BUOY
        </mock-link>
        <mock-link
          href="/drones"
          style="margin: 1rem 2rem 2rem; font-size: 1rem; color: white;"
        >
          DRONE
        </mock-link>
        <mock-link
          href="/about"
          style="margin: 1rem 2rem 2rem; font-size: 1rem; color: white;"
        >
          ABOUT
        </mock-link>
        <mock-link
          href="/faq"
          style="margin: 1rem 2rem 2rem; font-size: 1rem; color: white;"
        >
          FAQ
        </mock-link>
        <mock-link
          href="/register"
          style="margin: 1rem 2rem 2rem; font-size: 1rem; color: white;"
        >
          REGISTER A SITE
        </mock-link>
        <mock-box
          margintop="auto"
          padding="25px"
        >
          <mock-typography
            variant="subtitle1"
          >
            Aqualink's source code is licenced under MIT. Contribute!
          </mock-typography>
          <div
            class="MuiButtonGroup-root MuiButtonGroup-contained"
            role="group"
          >
            <mock-button
              classname="MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedContained MuiButtonGroup-groupedContainedHorizontal MuiButtonGroup-groupedContained MenuDrawer-contributeButton-122"
              color="default"
              disabled="false"
              disableelevation="false"
              disablefocusripple="false"
              disableripple="false"
              fullwidth="false"
              href="https://github.com/aqualinkorg/aqualink-app"
              size="medium"
              starticon="[object Object]"
              target="_blank"
              variant="contained"
            >
              GitHub
            </mock-button>
            <mock-button
              classname="MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedContained MuiButtonGroup-groupedContainedHorizontal MuiButtonGroup-groupedContained MenuDrawer-contributeButton-122"
              color="default"
              disabled="false"
              disableelevation="false"
              disablefocusripple="false"
              disableripple="false"
              fullwidth="false"
              href="https://ovio.org/project/aqualinkorg/aqualink-app"
              size="medium"
              target="_blank"
              variant="contained"
            >
              <img
                alt="Ovio Logo"
                src="ovio_logo.png"
              />
            </mock-button>
          </div>
        </mock-box>
      </mock-drawer>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-5 MuiGrid-grid-sm-4"
        >
          <mock-box
            alignitems="center"
            display="flex"
            flexwrap="nowrap"
          >
            <mock-iconbutton
              color="inherit"
              edge="start"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                />
              </svg>
            </mock-iconbutton>
            <mock-link
              classname="NavBar-navBarLink-113"
              href="/"
            >
              <mock-typography
                color="textPrimary"
                variant="h4"
              >
                Aqua
              </mock-typography>
              <mock-typography
                style="color: rgb(138, 198, 222);"
                variant="h4"
              >
                link
              </mock-typography>
            </mock-link>
          </mock-box>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-flex-end MuiGrid-grid-xs-7 MuiGrid-grid-sm-8"
        >
          <mock-box
            alignitems="center"
            display="flex"
            flexwrap="nowrap"
          >
            Mock User
            <mock-iconbutton
              classname="NavBar-button-120"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root NavBar-expandIcon-119"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
              </svg>
            </mock-iconbutton>
            <mock-menu
              classname="NavBar-userMenu-116"
              keepmounted="true"
              open="false"
            >
              <mock-menuitem
                classname="NavBar-menuItem-117"
              >
                Logout
              </mock-menuitem>
            </mock-menu>
          </mock-box>
        </div>
      </div>
    </mock-toolbar>
  </mock-appbar>
  <mock-dialog
    maxwidth="md"
    open="false"
  >
    <mock-card>
      <div
        class="MuiCardHeader-root RegisterDialog-dialogHeader-124"
      >
        <div
          class="MuiCardHeader-content"
        >
          <mock-typography
            classname="MuiCardHeader-title"
            component="span"
            display="block"
            variant="h5"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-around MuiGrid-grid-xs-12"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6"
                >
                  <mock-typography
                    variant="h4"
                  >
                    Aqua
                  </mock-typography>
                  <mock-typography
                    classname="RegisterDialog-dialogHeaderSecondPart-125"
                    variant="h4"
                  >
                    link
                  </mock-typography>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-flex-end MuiGrid-grid-xs-1"
                >
                  <mock-iconbutton
                    classname="RegisterDialog-closeButton-123"
                    size="small"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                      />
                    </svg>
                  </mock-iconbutton>
                </div>
              </div>
            </div>
          </mock-typography>
        </div>
      </div>
      <mock-cardcontent
        classname="RegisterDialog-contentWrapper-132"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
        >
          <div
            class="MuiGrid-root RegisterDialog-dialogContentTitle-126 MuiGrid-container MuiGrid-item MuiGrid-grid-xs-10"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <mock-typography
                color="textSecondary"
                variant="h5"
              >
                Create an account
              </mock-typography>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-10"
          >
            <form
              class="RegisterDialog-form-127"
            >
              <div
                class="MuiGrid-root RegisterDialog-textFieldWrapper-128 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="firstName"
                  inputprops="[object Object]"
                  label="First Name"
                  name="firstName"
                  placeholder="First Name"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root RegisterDialog-textFieldWrapper-128 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="lastName"
                  inputprops="[object Object]"
                  label="Last Name"
                  name="lastName"
                  placeholder="Last Name"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root RegisterDialog-textFieldWrapper-128 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="organization"
                  inputprops="[object Object]"
                  label="Organization"
                  name="organization"
                  placeholder="Organization"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root RegisterDialog-textFieldWrapper-128 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="emailAddress"
                  inputprops="[object Object]"
                  label="Email Address"
                  name="emailAddress"
                  placeholder="Email Address"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root RegisterDialog-textFieldWrapper-128 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="password"
                  inputprops="[object Object]"
                  label="Password"
                  name="password"
                  placeholder="Password"
                  type="password"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-space-around MuiGrid-grid-xs-11"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                >
                  <mock-checkbox
                    checked="false"
                    classname="RegisterDialog-termsCheckbox-133"
                    color="primary"
                  />
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10"
                >
                  <mock-typography
                    classname="RegisterDialog-formText-130"
                    color="textSecondary"
                    variant="subtitle1"
                  >
                    I have read the
                     
                    <a
                      class="RegisterDialog-termsLink-134"
                      href="/terms"
                    >
                      Terms and Conditions
                    </a>
                  </mock-typography>
                </div>
              </div>
              <div
                class="MuiGrid-root RegisterDialog-button-131 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-button
                  color="primary"
                  disabled="true"
                  fullwidth="true"
                  size="large"
                  type="submit"
                  variant="contained"
                >
                  REGISTER NOW
                </mock-button>
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-typography
                  classname="RegisterDialog-formText-130"
                  color="textSecondary"
                  variant="subtitle1"
                >
                  Have an account?
                   
                  <mock-button
                    color="primary"
                  >
                    SIGN IN
                  </mock-button>
                </mock-typography>
              </div>
            </form>
          </div>
        </div>
      </mock-cardcontent>
    </mock-card>
  </mock-dialog>
  <mock-dialog
    maxwidth="md"
    open="false"
  >
    <mock-card>
      <div
        class="MuiCardHeader-root SignInDialog-dialogHeader-136"
      >
        <div
          class="MuiCardHeader-content"
        >
          <mock-typography
            classname="MuiCardHeader-title"
            component="span"
            display="block"
            variant="h5"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-around MuiGrid-grid-xs-12"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6"
                >
                  <mock-typography
                    variant="h4"
                  >
                    Aqua
                  </mock-typography>
                  <mock-typography
                    classname="SignInDialog-dialogHeaderSecondPart-137"
                    variant="h4"
                  >
                    link
                  </mock-typography>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-flex-end MuiGrid-grid-xs-1"
                >
                  <mock-iconbutton
                    classname="SignInDialog-closeButton-135"
                    size="small"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                      />
                    </svg>
                  </mock-iconbutton>
                </div>
              </div>
            </div>
          </mock-typography>
        </div>
      </div>
      <div
        class="MuiCollapse-container MuiCollapse-hidden"
        style="min-height: 0px;"
      >
        <div
          class="MuiCollapse-wrapper"
        >
          <div
            class="MuiCollapse-wrapperInner"
          >
            <div
              class="MuiPaper-root MuiAlert-root MuiAlert-standardSuccess MuiPaper-elevation0"
              role="alert"
            >
              <div
                class="MuiAlert-icon"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20,12A8,8 0 0,1 12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4C12.76,4 13.5,4.11 14.2, 4.31L15.77,2.74C14.61,2.26 13.34,2 12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0, 0 22,12M7.91,10.08L6.5,11.5L11,16L21,6L19.59,4.58L11,13.17L7.91,10.08Z"
                  />
                </svg>
              </div>
              <div
                class="MuiAlert-message"
              >
                Password reset email sent to .
              </div>
              <div
                class="MuiAlert-action"
              >
                <mock-iconbutton
                  aria-label="close"
                  color="inherit"
                  size="small"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                    />
                  </svg>
                </mock-iconbutton>
              </div>
            </div>
          </div>
        </div>
      </div>
      <mock-cardcontent>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
        >
          <div
            class="MuiGrid-root SignInDialog-dialogContentTitle-138 MuiGrid-container MuiGrid-item MuiGrid-grid-xs-10"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <mock-typography
                color="textSecondary"
                variant="h5"
              >
                Sign In
              </mock-typography>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-10"
          >
            <form
              class="SignInDialog-form-139"
            >
              <div
                class="MuiGrid-root SignInDialog-textFieldWrapper-140 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-typography
                  classname="SignInDialog-formText-142"
                  variant="subtitle2"
                >
                  or login with email address
                </mock-typography>
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="emailAddress"
                  inputprops="[object Object]"
                  label="Email Address"
                  name="emailAddress"
                  placeholder="Email Address"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root SignInDialog-textFieldWrapper-140 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="password"
                  inputprops="[object Object]"
                  label="Password"
                  name="password"
                  placeholder="Password"
                  type="password"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-button
                  classname="SignInDialog-forgotPasswordButton-144"
                >
                  <mock-typography
                    color="textSecondary"
                    variant="subtitle2"
                  >
                    Forgot your password?
                  </mock-typography>
                </mock-button>
              </div>
              <div
                class="MuiGrid-root SignInDialog-button-143 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-button
                  color="primary"
                  fullwidth="true"
                  size="large"
                  type="submit"
                  variant="contained"
                >
                  SIGN IN
                </mock-button>
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-typography
                  classname="SignInDialog-formText-142"
                  color="textSecondary"
                  variant="subtitle1"
                >
                  Don't have an account?
                   
                  <mock-button
                    color="primary"
                  >
                    REGISTER
                  </mock-button>
                </mock-typography>
              </div>
            </form>
          </div>
        </div>
      </mock-cardcontent>
    </mock-card>
  </mock-dialog>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg"
  >
    <div
      class="MuiCollapse-container MuiCollapse-hidden"
      style="min-height: 0px;"
    >
      <div
        class="MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner"
        >
          <div
            class="MuiPaper-root MuiAlert-root MuiAlert-standardSuccess MuiPaper-elevation0"
            role="alert"
          >
            <div
              class="MuiAlert-icon"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20,12A8,8 0 0,1 12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4C12.76,4 13.5,4.11 14.2, 4.31L15.77,2.74C14.61,2.26 13.34,2 12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0, 0 22,12M7.91,10.08L6.5,11.5L11,16L21,6L19.59,4.58L11,13.17L7.91,10.08Z"
                />
              </svg>
            </div>
            <div
              class="MuiAlert-message"
            >
              Something went wrong
            </div>
            <div
              class="MuiAlert-action"
            >
              <mock-iconbutton
                color="inherit"
                size="small"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                  />
                </svg>
              </mock-iconbutton>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root ReefNavBar-root-145 MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-align-items-xs-center"
        >
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <a
              href="/"
              style="text-decoration: none;"
            >
              <mock-iconbutton
                aria-label="menu"
                color="primary"
                edge="start"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                  />
                </svg>
              </mock-iconbutton>
            </a>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-grid-xs-10"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-12 MuiGrid-grid-md-4"
            >
              <mock-box>
                <mock-typography
                  variant="h4"
                >
                  Hawaii
                </mock-typography>
              </mock-box>
            </div>
          </div>
        </div>
      </div>
    </div>
    <mock-box
      mt="1.3rem"
    >
      <div
        class="MuiPaper-root MuiAlert-root MuiAlert-standardInfo MuiPaper-elevation0"
        role="alert"
      >
        <div
          class="MuiAlert-icon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20, 12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10, 10 0 0,0 12,2M11,17H13V11H11V17Z"
            />
          </svg>
        </div>
        <div
          class="MuiAlert-message"
        >
          Currently no Smart Buoy deployed at this reef location. All values are derived from a combination of NOAA satellite readings and weather models.
        </div>
      </div>
    </mock-box>
    <mock-box
      mt="1rem"
    >
      <mock-box
        classname="CardTitle-root-150"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-baseline"
        >
          <div
            class="MuiGrid-root MuiGrid-item"
            style="margin-right: 2rem;"
          >
            <mock-typography
              variant="h6"
            >
              LOCATION:
            </mock-typography>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item"
            style="margin-right: 1rem;"
          >
            <mock-typography
              variant="subtitle2"
            >
              LAT: 0.000
            </mock-typography>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item"
            style="margin-right: 0px;"
          >
            <mock-typography
              variant="subtitle2"
            >
              LONG: 0.000
            </mock-typography>
          </div>
        </div>
      </mock-box>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-4 MuiGrid-justify-xs-space-between"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
        >
          <div
            class="ReefDetails-container-148"
          >
            <mock-map
              polygon="[object Object]"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
        >
          <div
            class="ReefDetails-container-148"
          >
            <mock-featuredmedia />
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root ReefDetails-metricsWrapper-149 MuiGrid-container MuiGrid-spacing-xs-4 MuiGrid-justify-xs-space-between"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-3"
        >
          <mock-card
            classname="Satellite-card-153"
            style="background-color: rgb(117, 180, 114);"
          >
            <div
              class="MuiCardHeader-root Satellite-header-155"
            >
              <div
                class="MuiCardHeader-content"
              >
                <mock-typography
                  classname="MuiCardHeader-title"
                  component="span"
                  display="block"
                  variant="h5"
                >
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-space-between"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-8"
                    >
                      <mock-typography
                        classname="Satellite-cardTitle-154"
                        variant="h6"
                      >
                        SATELLITE OBSERVATION
                      </mock-typography>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                    >
                      <img
                        alt="satellite"
                        class="Satellite-titleImage-160"
                        src="satellite.svg"
                      />
                    </div>
                  </div>
                </mock-typography>
              </div>
            </div>
            <mock-cardcontent
              classname="Satellite-content-161"
            >
              <mock-box
                display="flex"
                flexgrow="1"
                p="1rem"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
                  >
                    <mock-typography
                      classname="Satellite-contentTextTitles-156"
                      variant="subtitle2"
                    >
                      SURFACE TEMP
                    </mock-typography>
                    <mock-typography
                      classname="Satellite-contentTextValues-157"
                      variant="h2"
                    >
                      29.0 °C
                    </mock-typography>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
                  >
                    <mock-typography
                      classname="Satellite-contentTextTitles-156"
                      variant="subtitle2"
                    >
                      HISTORICAL MAX
                    </mock-typography>
                    <mock-tooltip
                      title="Historical maximum monthly average over the past 20 years"
                    >
                      <mock-typography
                        classname="Satellite-contentTextValues-157"
                        variant="h2"
                      >
                        0.0 °C
                      </mock-typography>
                    </mock-tooltip>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
                  >
                    <mock-typography
                      classname="Satellite-contentTextTitles-156"
                      variant="subtitle2"
                    >
                      HEAT STRESS
                    </mock-typography>
                    <mock-tooltip
                      title="Degree Heating Weeks - a measure of the amount of time above the 20 year historical maximum temperatures"
                    >
                      <mock-typography
                        classname="Satellite-contentTextValues-157"
                        variant="h2"
                      >
                        4.9 DHW
                      </mock-typography>
                    </mock-tooltip>
                  </div>
                </div>
              </mock-box>
              <div
                class="MuiGrid-root MuiGrid-container"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                  style="background-color: rgb(8, 91, 163); height: 2rem;"
                >
                  <mock-box
                    textalign="center"
                  >
                    <mock-typography
                      align="center"
                      variant="caption"
                    >
                      0
                    </mock-typography>
                  </mock-box>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                  style="background-color: rgb(12, 157, 165); height: 2rem;"
                >
                  <mock-box
                    textalign="center"
                  >
                    <mock-typography
                      align="center"
                      variant="caption"
                    >
                      2
                    </mock-typography>
                  </mock-box>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                  style="background-color: rgb(117, 180, 114); height: 2rem;"
                >
                  <mock-box
                    textalign="center"
                  >
                    <mock-typography
                      align="center"
                      variant="caption"
                    >
                      4
                    </mock-typography>
                  </mock-box>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                  style="background-color: rgb(123, 217, 37); height: 2rem;"
                >
                  <mock-box
                    textalign="center"
                  >
                    <mock-typography
                      align="center"
                      variant="caption"
                    >
                      6
                    </mock-typography>
                  </mock-box>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                  style="background-color: rgb(193, 229, 34); height: 2rem;"
                >
                  <mock-box
                    textalign="center"
                  >
                    <mock-typography
                      align="center"
                      variant="caption"
                    >
                      8
                    </mock-typography>
                  </mock-box>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                  style="background-color: rgb(229, 187, 43); height: 2rem;"
                >
                  <mock-box
                    textalign="center"
                  >
                    <mock-typography
                      align="center"
                      variant="caption"
                    >
                      10
                    </mock-typography>
                  </mock-box>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                  style="background-color: rgb(230, 121, 40); height: 2rem;"
                >
                  <mock-box
                    textalign="center"
                  >
                    <mock-typography
                      align="center"
                      variant="caption"
                    >
                      12
                    </mock-typography>
                  </mock-box>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                  style="background-color: rgb(232, 79, 46); height: 2rem;"
                >
                  <mock-box
                    textalign="center"
                  >
                    <mock-typography
                      align="center"
                      variant="caption"
                    >
                      14
                    </mock-typography>
                  </mock-box>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                  style="background-color: rgb(216, 69, 36); height: 2rem;"
                >
                  <mock-box
                    textalign="center"
                  >
                    <mock-typography
                      align="center"
                      variant="caption"
                    >
                      16
                    </mock-typography>
                  </mock-box>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                  style="background-color: rgb(128, 58, 32); height: 2rem;"
                >
                  <mock-box
                    textalign="center"
                  >
                    <mock-typography
                      align="center"
                      variant="caption"
                    >
                      18
                    </mock-typography>
                  </mock-box>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                  style="background-color: rgb(185, 41, 68); height: 2rem;"
                >
                  <mock-box
                    textalign="center"
                  >
                    <mock-typography
                      align="center"
                      variant="caption"
                    >
                      20
                    </mock-typography>
                  </mock-box>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                  style="background-color: rgb(128, 48, 126); height: 2rem;"
                >
                  <mock-box
                    textalign="center"
                  >
                    <mock-typography
                      align="center"
                      variant="caption"
                    >
                      25
                    </mock-typography>
                  </mock-box>
                </div>
              </div>
            </mock-cardcontent>
          </mock-card>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-3"
        >
          <mock-card
            classname="Sensor-card-163"
          >
            <div
              class="MuiCardHeader-root Sensor-header-165"
            >
              <div
                class="MuiCardHeader-content"
              >
                <mock-typography
                  classname="MuiCardHeader-title"
                  component="span"
                  display="block"
                  variant="h5"
                >
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-space-between"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8"
                    >
                      <mock-typography
                        classname="Sensor-cardTitle-164"
                        variant="h6"
                      >
                        SENSOR OBSERVATION
                      </mock-typography>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                    >
                      <img
                        alt="buoy"
                        class="Sensor-titleImage-170"
                        src="buoy.svg"
                      />
                    </div>
                  </div>
                </mock-typography>
              </div>
            </div>
            <mock-cardcontent
              classname="Sensor-content-171"
            >
              <mock-box
                display="flex"
                flexgrow="1"
                p="1rem"
                style="position: relative;"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
                  >
                    <mock-typography
                      classname="Sensor-contentTextTitles-166"
                      variant="subtitle2"
                    >
                      TEMP AT 1m
                    </mock-typography>
                    <mock-typography
                      classname="Sensor-contentTextValues-167"
                      variant="h2"
                    >
                      - - °C
                    </mock-typography>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
                  >
                    <mock-typography
                      classname="Sensor-contentTextTitles-166"
                      variant="subtitle2"
                    >
                      TEMP AT 0m
                    </mock-typography>
                    <mock-typography
                      classname="Sensor-contentTextValues-167"
                      variant="h2"
                    >
                      39.0 °C
                    </mock-typography>
                  </div>
                </div>
                <mock-box
                  bottom="0"
                  position="absolute"
                  right="0"
                >
                  <img
                    alt="sensor"
                    src="sensor.svg"
                  />
                </mock-box>
              </mock-box>
            </mock-cardcontent>
          </mock-card>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-3"
        >
          <mock-card
            classname="Bleaching-card-175"
          >
            <div
              class="MuiCardHeader-root Bleaching-header-177"
            >
              <div
                class="MuiCardHeader-content"
              >
                <mock-typography
                  classname="MuiCardHeader-title"
                  component="span"
                  display="block"
                  variant="h5"
                >
                  <div
                    class="MuiGrid-root MuiGrid-container"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
                    >
                      <mock-typography
                        color="textSecondary"
                        variant="h6"
                      >
                        HEAT STRESS ALERT LEVEL
                      </mock-typography>
                    </div>
                  </div>
                </mock-typography>
              </div>
            </div>
            <mock-cardcontent
              classname="Bleaching-contentWrapper-182"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
                style="height: 100%;"
              >
                <img
                  alt="alert-level"
                  src="alert_nostress.svg"
                />
              </div>
            </mock-cardcontent>
          </mock-card>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-3"
        >
          <mock-card
            classname="Waves-card-183"
          >
            <mock-cardcontent
              classname="Waves-contentWrapper-191"
            >
              <div
                class="MuiGrid-root Waves-content-192 MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
                >
                  <mock-typography
                    classname="Waves-cardTitle-184"
                    variant="h6"
                  >
                    WIND
                  </mock-typography>
                  <img
                    alt="wind"
                    class="Waves-titleImages-190"
                    src="wind.svg"
                  />
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
                  >
                    <mock-typography
                      classname="Waves-contentTextTitles-186"
                      color="textSecondary"
                      variant="subtitle2"
                    >
                      SPEED
                    </mock-typography>
                    <div
                      class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-baseline"
                    >
                      <mock-typography
                        classname="Waves-contentTextValues-187"
                        color="textSecondary"
                        variant="h3"
                      >
                        - -
                      </mock-typography>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
                  >
                    <mock-typography
                      classname="Waves-contentTextTitles-186"
                      color="textSecondary"
                      variant="subtitle2"
                    >
                      DIRECTION
                    </mock-typography>
                    <div
                      class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-baseline"
                    >
                      <mock-typography
                        classname="Waves-contentTextValues-187"
                        color="textSecondary"
                        variant="h3"
                      >
                        - -
                      </mock-typography>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
                >
                  <mock-typography
                    classname="Waves-cardTitle-184"
                    variant="h6"
                  >
                    WAVES
                  </mock-typography>
                  <img
                    alt="waves"
                    class="Waves-titleImages-190"
                    src="waves.svg"
                  />
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-space-between MuiGrid-grid-xs-12"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-lg-4"
                  >
                    <mock-typography
                      classname="Waves-contentTextTitles-186"
                      color="textSecondary"
                      variant="subtitle2"
                    >
                      HEIGHT
                    </mock-typography>
                    <div
                      class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-baseline"
                    >
                      <mock-typography
                        classname="Waves-contentTextValues-187"
                        color="textSecondary"
                        variant="h3"
                      >
                        - -
                      </mock-typography>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-lg-3"
                  >
                    <mock-typography
                      classname="Waves-contentTextTitles-186"
                      color="textSecondary"
                      variant="subtitle2"
                    >
                      PERIOD
                    </mock-typography>
                    <div
                      class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-baseline"
                    >
                      <mock-typography
                        classname="Waves-contentTextValues-187"
                        color="textSecondary"
                        variant="h3"
                      >
                        - -
                      </mock-typography>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-lg-5"
                  >
                    <mock-typography
                      classname="Waves-contentTextTitles-186"
                      color="textSecondary"
                      variant="subtitle2"
                    >
                      DIRECTION
                    </mock-typography>
                    <div
                      class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-baseline"
                    >
                      <mock-typography
                        classname="Waves-contentTextValues-187"
                        color="textSecondary"
                        variant="h3"
                      >
                        - -
                        
                      </mock-typography>
                    </div>
                  </div>
                </div>
              </div>
            </mock-cardcontent>
          </mock-card>
        </div>
      </div>
      <mock-box
        mt="2rem"
      >
        <mock-charts
          background="true"
          dailydata="[object Object]"
          depth="0"
          surveys=""
          title="DAILY WATER TEMPERATURE (°C)"
        />
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-baseline MuiGrid-justify-xs-flex-end"
        >
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <mock-typography
              color="textSecondary"
              variant="h6"
            >
              Time range:
            </mock-typography>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <div
              class="MuiInputBase-root MuiInput-root MuiInput-underline"
            >
              <div
                aria-haspopup="listbox"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                role="button"
                tabindex="0"
              >
                <mock-typography
                  color="textSecondary"
                >
                  One week
                </mock-typography>
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                tabindex="-1"
                value="week"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <mock-menu
                anchorel="[object HTMLDivElement]"
                id="menu-"
                menulistprops="[object Object]"
                open="false"
                paperprops="[object Object]"
              >
                <mock-menuitem
                  data-value="day"
                  role="option"
                  selected="false"
                >
                  <mock-typography
                    color="textSecondary"
                  >
                    One day
                  </mock-typography>
                </mock-menuitem>
                <mock-menuitem
                  aria-selected="true"
                  data-value="week"
                  role="option"
                  selected="true"
                >
                  <mock-typography
                    color="textSecondary"
                  >
                    One week
                  </mock-typography>
                </mock-menuitem>
              </mock-menu>
            </div>
          </div>
        </div>
        <mock-dialog
          open="false"
        >
          <mock-dialogtitle
            classname="Dialog-dialogTitle-203"
          >
            <mock-typography>
              Are you sure you want to delete this survey point? It will be deleted across all surveys.
            </mock-typography>
          </mock-dialogtitle>
          <mock-dialogcontent />
          <mock-dialogactions>
            <mock-button
              color="secondary"
              size="small"
              variant="contained"
            >
              No
            </mock-button>
            <mock-button
              color="primary"
              size="small"
              variant="contained"
            >
              Yes
            </mock-button>
          </mock-dialogactions>
        </mock-dialog>
        <div
          class="MuiGrid-root Surveys-root-194 MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-justify-xs-center"
        >
          <mock-box
            bgcolor="#f5f6f6"
            height="100%"
            position="absolute"
            zindex="-1"
          />
          <div
            class="MuiGrid-root Surveys-surveyWrapper-195 MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-baseline MuiGrid-justify-xs-space-between MuiGrid-grid-xs-11 MuiGrid-grid-lg-12"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-md-12 MuiGrid-grid-lg-4"
            >
              <mock-typography
                classname="Surveys-title-196"
              >
                Survey History
              </mock-typography>
            </div>
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-grid-md-12 MuiGrid-grid-lg-4"
            >
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <mock-typography
                  classname="Surveys-subTitle-197"
                  variant="h6"
                >
                  Survey Point:
                </mock-typography>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-grid-md-12 MuiGrid-grid-lg-4"
            >
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <mock-typography
                  classname="Surveys-subTitle-197"
                  variant="h6"
                >
                  Observation:
                </mock-typography>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <div
                  class="MuiFormControl-root Surveys-formControl-198"
                >
                  <div
                    class="MuiInputBase-root MuiInput-root MuiInput-underline Surveys-selectedItem-199 MuiInputBase-formControl MuiInput-formControl"
                  >
                    <div
                      aria-haspopup="listbox"
                      aria-labelledby="survey-observation survey-observation"
                      class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input Surveys-textField-201"
                      id="survey-observation"
                      role="button"
                      tabindex="0"
                    >
                      <mock-typography
                        classname="Surveys-menuItem-200"
                        variant="h6"
                      >
                        Any
                      </mock-typography>
                    </div>
                    <input
                      aria-hidden="true"
                      class="MuiSelect-nativeInput"
                      name="survey-observation"
                      tabindex="-1"
                      value="any"
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSelect-icon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M7 10l5 5 5-5z"
                      />
                    </svg>
                    <mock-menu
                      anchorel="[object HTMLDivElement]"
                      id="menu-survey-observation"
                      menulistprops="[object Object]"
                      open="false"
                      paperprops="[object Object]"
                    >
                      <mock-menuitem
                        aria-selected="true"
                        data-value="any"
                        role="option"
                        selected="true"
                      >
                        <mock-typography
                          classname="Surveys-menuItem-200"
                          variant="h6"
                        >
                          Any
                        </mock-typography>
                      </mock-menuitem>
                      <mock-menuitem
                        classname="Surveys-menuItem-200"
                        data-value="healthy"
                        role="option"
                        selected="false"
                      >
                        Appears healthy
                      </mock-menuitem>
                      <mock-menuitem
                        classname="Surveys-menuItem-200"
                        data-value="possible-disease"
                        role="option"
                        selected="false"
                      >
                        Showing possible signs of disease
                      </mock-menuitem>
                      <mock-menuitem
                        classname="Surveys-menuItem-200"
                        data-value="evident-disease"
                        role="option"
                        selected="false"
                      >
                        Signs of disease are evident
                      </mock-menuitem>
                      <mock-menuitem
                        classname="Surveys-menuItem-200"
                        data-value="mortality"
                        role="option"
                        selected="false"
                      >
                        Signs of mortality are evident
                      </mock-menuitem>
                      <mock-menuitem
                        classname="Surveys-menuItem-200"
                        data-value="environmental"
                        role="option"
                        selected="false"
                      >
                        Signs of environmental disturbance are evident (e.g.,storm damage)
                      </mock-menuitem>
                      <mock-menuitem
                        classname="Surveys-menuItem-200"
                        data-value="anthropogenic"
                        role="option"
                        selected="false"
                      >
                        Signs of anthropogenic disturbance are evident (e.g.,fishing gear, trampling)
                      </mock-menuitem>
                    </mock-menu>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-11 MuiGrid-grid-lg-12"
          >
            <div
              class="SurveyTimeline-root-213"
            >
              <mock-hidden
                mddown="true"
              >
                <ul
                  class="MuiTimeline-root MuiTimeline-alignLeft"
                />
              </mock-hidden>
              <mock-hidden
                lgup="true"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
                />
              </mock-hidden>
            </div>
          </div>
        </div>
      </mock-box>
    </mock-box>
  </div>
  <mock-appbar
    classname="Footer-appBar-151"
    position="static"
  >
    <mock-toolbar>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-center"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-10"
        >
          <mock-link
            classname="Footer-navBarLink-152"
            href="/"
          >
            <mock-typography
              color="textPrimary"
              variant="h4"
            >
              Aqua
            </mock-typography>
            <mock-typography
              style="color: rgb(138, 198, 222);"
              variant="h4"
            >
              link
            </mock-typography>
          </mock-link>
        </div>
      </div>
    </mock-toolbar>
  </mock-appbar>
</div>
`;

exports[`Reef Detail Page should render with given state from Redux store: snapshot-with-no-data 1`] = `
<div>
  <mock-appbar
    classname="NavBar-appBar-3"
    color="primary"
    position="static"
  >
    <mock-toolbar
      classname="NavBar-toolbar-6"
    >
      <mock-drawer
        anchor="left"
        classes="[object Object]"
        open="false"
      >
        <mock-iconbutton
          style="align-self: flex-end; margin-right: 5px; margin-top: 5px; color: white;"
        >
          <clear />
        </mock-iconbutton>
        <mock-link
          href="/"
          style="margin: 1rem 2rem 2rem; font-size: 1rem; color: white;"
        >
          HOME
        </mock-link>
        <mock-link
          href="/buoy"
          style="margin: 1rem 2rem 2rem; font-size: 1rem; color: white;"
        >
          BUOY
        </mock-link>
        <mock-link
          href="/drones"
          style="margin: 1rem 2rem 2rem; font-size: 1rem; color: white;"
        >
          DRONE
        </mock-link>
        <mock-link
          href="/about"
          style="margin: 1rem 2rem 2rem; font-size: 1rem; color: white;"
        >
          ABOUT
        </mock-link>
        <mock-link
          href="/faq"
          style="margin: 1rem 2rem 2rem; font-size: 1rem; color: white;"
        >
          FAQ
        </mock-link>
        <mock-link
          href="/register"
          style="margin: 1rem 2rem 2rem; font-size: 1rem; color: white;"
        >
          REGISTER A SITE
        </mock-link>
        <mock-box
          margintop="auto"
          padding="25px"
        >
          <mock-typography
            variant="subtitle1"
          >
            Aqualink's source code is licenced under MIT. Contribute!
          </mock-typography>
          <div
            class="MuiButtonGroup-root MuiButtonGroup-contained"
            role="group"
          >
            <mock-button
              classname="MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedContained MuiButtonGroup-groupedContainedHorizontal MuiButtonGroup-groupedContained MenuDrawer-contributeButton-13"
              color="default"
              disabled="false"
              disableelevation="false"
              disablefocusripple="false"
              disableripple="false"
              fullwidth="false"
              href="https://github.com/aqualinkorg/aqualink-app"
              size="medium"
              starticon="[object Object]"
              target="_blank"
              variant="contained"
            >
              GitHub
            </mock-button>
            <mock-button
              classname="MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedContained MuiButtonGroup-groupedContainedHorizontal MuiButtonGroup-groupedContained MenuDrawer-contributeButton-13"
              color="default"
              disabled="false"
              disableelevation="false"
              disablefocusripple="false"
              disableripple="false"
              fullwidth="false"
              href="https://ovio.org/project/aqualinkorg/aqualink-app"
              size="medium"
              target="_blank"
              variant="contained"
            >
              <img
                alt="Ovio Logo"
                src="ovio_logo.png"
              />
            </mock-button>
          </div>
        </mock-box>
      </mock-drawer>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-5 MuiGrid-grid-sm-4"
        >
          <mock-box
            alignitems="center"
            display="flex"
            flexwrap="nowrap"
          >
            <mock-iconbutton
              color="inherit"
              edge="start"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                />
              </svg>
            </mock-iconbutton>
            <mock-link
              classname="NavBar-navBarLink-4"
              href="/"
            >
              <mock-typography
                color="textPrimary"
                variant="h4"
              >
                Aqua
              </mock-typography>
              <mock-typography
                style="color: rgb(138, 198, 222);"
                variant="h4"
              >
                link
              </mock-typography>
            </mock-link>
          </mock-box>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-flex-end MuiGrid-grid-xs-7 MuiGrid-grid-sm-8"
        >
          <mock-box
            alignitems="center"
            display="flex"
            flexwrap="nowrap"
          >
            Mock User
            <mock-iconbutton
              classname="NavBar-button-11"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root NavBar-expandIcon-10"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
              </svg>
            </mock-iconbutton>
            <mock-menu
              classname="NavBar-userMenu-7"
              keepmounted="true"
              open="false"
            >
              <mock-menuitem
                classname="NavBar-menuItem-8"
              >
                Logout
              </mock-menuitem>
            </mock-menu>
          </mock-box>
        </div>
      </div>
    </mock-toolbar>
  </mock-appbar>
  <mock-dialog
    maxwidth="md"
    open="false"
  >
    <mock-card>
      <div
        class="MuiCardHeader-root RegisterDialog-dialogHeader-15"
      >
        <div
          class="MuiCardHeader-content"
        >
          <mock-typography
            classname="MuiCardHeader-title"
            component="span"
            display="block"
            variant="h5"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-around MuiGrid-grid-xs-12"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6"
                >
                  <mock-typography
                    variant="h4"
                  >
                    Aqua
                  </mock-typography>
                  <mock-typography
                    classname="RegisterDialog-dialogHeaderSecondPart-16"
                    variant="h4"
                  >
                    link
                  </mock-typography>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-flex-end MuiGrid-grid-xs-1"
                >
                  <mock-iconbutton
                    classname="RegisterDialog-closeButton-14"
                    size="small"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                      />
                    </svg>
                  </mock-iconbutton>
                </div>
              </div>
            </div>
          </mock-typography>
        </div>
      </div>
      <mock-cardcontent
        classname="RegisterDialog-contentWrapper-23"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
        >
          <div
            class="MuiGrid-root RegisterDialog-dialogContentTitle-17 MuiGrid-container MuiGrid-item MuiGrid-grid-xs-10"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <mock-typography
                color="textSecondary"
                variant="h5"
              >
                Create an account
              </mock-typography>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-10"
          >
            <form
              class="RegisterDialog-form-18"
            >
              <div
                class="MuiGrid-root RegisterDialog-textFieldWrapper-19 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="firstName"
                  inputprops="[object Object]"
                  label="First Name"
                  name="firstName"
                  placeholder="First Name"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root RegisterDialog-textFieldWrapper-19 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="lastName"
                  inputprops="[object Object]"
                  label="Last Name"
                  name="lastName"
                  placeholder="Last Name"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root RegisterDialog-textFieldWrapper-19 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="organization"
                  inputprops="[object Object]"
                  label="Organization"
                  name="organization"
                  placeholder="Organization"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root RegisterDialog-textFieldWrapper-19 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="emailAddress"
                  inputprops="[object Object]"
                  label="Email Address"
                  name="emailAddress"
                  placeholder="Email Address"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root RegisterDialog-textFieldWrapper-19 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="password"
                  inputprops="[object Object]"
                  label="Password"
                  name="password"
                  placeholder="Password"
                  type="password"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-space-around MuiGrid-grid-xs-11"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                >
                  <mock-checkbox
                    checked="false"
                    classname="RegisterDialog-termsCheckbox-24"
                    color="primary"
                  />
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10"
                >
                  <mock-typography
                    classname="RegisterDialog-formText-21"
                    color="textSecondary"
                    variant="subtitle1"
                  >
                    I have read the
                     
                    <a
                      class="RegisterDialog-termsLink-25"
                      href="/terms"
                    >
                      Terms and Conditions
                    </a>
                  </mock-typography>
                </div>
              </div>
              <div
                class="MuiGrid-root RegisterDialog-button-22 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-button
                  color="primary"
                  disabled="true"
                  fullwidth="true"
                  size="large"
                  type="submit"
                  variant="contained"
                >
                  REGISTER NOW
                </mock-button>
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-typography
                  classname="RegisterDialog-formText-21"
                  color="textSecondary"
                  variant="subtitle1"
                >
                  Have an account?
                   
                  <mock-button
                    color="primary"
                  >
                    SIGN IN
                  </mock-button>
                </mock-typography>
              </div>
            </form>
          </div>
        </div>
      </mock-cardcontent>
    </mock-card>
  </mock-dialog>
  <mock-dialog
    maxwidth="md"
    open="false"
  >
    <mock-card>
      <div
        class="MuiCardHeader-root SignInDialog-dialogHeader-27"
      >
        <div
          class="MuiCardHeader-content"
        >
          <mock-typography
            classname="MuiCardHeader-title"
            component="span"
            display="block"
            variant="h5"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-around MuiGrid-grid-xs-12"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6"
                >
                  <mock-typography
                    variant="h4"
                  >
                    Aqua
                  </mock-typography>
                  <mock-typography
                    classname="SignInDialog-dialogHeaderSecondPart-28"
                    variant="h4"
                  >
                    link
                  </mock-typography>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-flex-end MuiGrid-grid-xs-1"
                >
                  <mock-iconbutton
                    classname="SignInDialog-closeButton-26"
                    size="small"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                      />
                    </svg>
                  </mock-iconbutton>
                </div>
              </div>
            </div>
          </mock-typography>
        </div>
      </div>
      <div
        class="MuiCollapse-container MuiCollapse-hidden"
        style="min-height: 0px;"
      >
        <div
          class="MuiCollapse-wrapper"
        >
          <div
            class="MuiCollapse-wrapperInner"
          >
            <div
              class="MuiPaper-root MuiAlert-root MuiAlert-standardSuccess MuiPaper-elevation0"
              role="alert"
            >
              <div
                class="MuiAlert-icon"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20,12A8,8 0 0,1 12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4C12.76,4 13.5,4.11 14.2, 4.31L15.77,2.74C14.61,2.26 13.34,2 12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0, 0 22,12M7.91,10.08L6.5,11.5L11,16L21,6L19.59,4.58L11,13.17L7.91,10.08Z"
                  />
                </svg>
              </div>
              <div
                class="MuiAlert-message"
              >
                Password reset email sent to .
              </div>
              <div
                class="MuiAlert-action"
              >
                <mock-iconbutton
                  aria-label="close"
                  color="inherit"
                  size="small"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                    />
                  </svg>
                </mock-iconbutton>
              </div>
            </div>
          </div>
        </div>
      </div>
      <mock-cardcontent>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
        >
          <div
            class="MuiGrid-root SignInDialog-dialogContentTitle-29 MuiGrid-container MuiGrid-item MuiGrid-grid-xs-10"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <mock-typography
                color="textSecondary"
                variant="h5"
              >
                Sign In
              </mock-typography>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-10"
          >
            <form
              class="SignInDialog-form-30"
            >
              <div
                class="MuiGrid-root SignInDialog-textFieldWrapper-31 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-typography
                  classname="SignInDialog-formText-33"
                  variant="subtitle2"
                >
                  or login with email address
                </mock-typography>
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="emailAddress"
                  inputprops="[object Object]"
                  label="Email Address"
                  name="emailAddress"
                  placeholder="Email Address"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root SignInDialog-textFieldWrapper-31 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="password"
                  inputprops="[object Object]"
                  label="Password"
                  name="password"
                  placeholder="Password"
                  type="password"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-button
                  classname="SignInDialog-forgotPasswordButton-35"
                >
                  <mock-typography
                    color="textSecondary"
                    variant="subtitle2"
                  >
                    Forgot your password?
                  </mock-typography>
                </mock-button>
              </div>
              <div
                class="MuiGrid-root SignInDialog-button-34 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-button
                  color="primary"
                  fullwidth="true"
                  size="large"
                  type="submit"
                  variant="contained"
                >
                  SIGN IN
                </mock-button>
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-typography
                  classname="SignInDialog-formText-33"
                  color="textSecondary"
                  variant="subtitle1"
                >
                  Don't have an account?
                   
                  <mock-button
                    color="primary"
                  >
                    REGISTER
                  </mock-button>
                </mock-typography>
              </div>
            </form>
          </div>
        </div>
      </mock-cardcontent>
    </mock-card>
  </mock-dialog>
  <div
    class="MuiContainer-root Reef-noDataWrapper-2 MuiContainer-maxWidthLg"
  >
    <div
      class="MuiCollapse-container MuiCollapse-hidden"
      style="min-height: 0px;"
    >
      <div
        class="MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner"
        >
          <div
            class="MuiPaper-root MuiAlert-root MuiAlert-standardSuccess MuiPaper-elevation0"
            role="alert"
          >
            <div
              class="MuiAlert-icon"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20,12A8,8 0 0,1 12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4C12.76,4 13.5,4.11 14.2, 4.31L15.77,2.74C14.61,2.26 13.34,2 12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0, 0 22,12M7.91,10.08L6.5,11.5L11,16L21,6L19.59,4.58L11,13.17L7.91,10.08Z"
                />
              </svg>
            </div>
            <div
              class="MuiAlert-message"
            >
              Something went wrong
            </div>
            <div
              class="MuiAlert-action"
            >
              <mock-iconbutton
                color="inherit"
                size="small"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                  />
                </svg>
              </mock-iconbutton>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root ReefNavBar-root-36 MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-align-items-xs-center"
        >
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <a
              href="/"
              style="text-decoration: none;"
            >
              <mock-iconbutton
                aria-label="menu"
                color="primary"
                edge="start"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                  />
                </svg>
              </mock-iconbutton>
            </a>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-grid-xs-10"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-12 MuiGrid-grid-md-4"
            >
              <mock-box>
                <mock-typography
                  variant="h4"
                >
                  Hawaii
                </mock-typography>
              </mock-box>
            </div>
          </div>
        </div>
      </div>
    </div>
    <mock-box
      mt="1.3rem"
    >
      <div
        class="MuiPaper-root MuiAlert-root MuiAlert-standardInfo MuiPaper-elevation0"
        role="alert"
      >
        <div
          class="MuiAlert-icon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20, 12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10, 10 0 0,0 12,2M11,17H13V11H11V17Z"
            />
          </svg>
        </div>
        <div
          class="MuiAlert-message"
        >
          Currently no Smart Buoy deployed at this reef location. All values are derived from a combination of NOAA satellite readings and weather models.
        </div>
      </div>
    </mock-box>
    <mock-box
      mt="1rem"
    >
      <mock-box
        classname="CardTitle-root-41"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-baseline"
        >
          <div
            class="MuiGrid-root MuiGrid-item"
            style="margin-right: 2rem;"
          >
            <mock-typography
              variant="h6"
            >
              LOCATION:
            </mock-typography>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item"
            style="margin-right: 1rem;"
          >
            <mock-typography
              variant="subtitle2"
            >
              LAT: 0.000
            </mock-typography>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item"
            style="margin-right: 0px;"
          >
            <mock-typography
              variant="subtitle2"
            >
              LONG: 0.000
            </mock-typography>
          </div>
        </div>
      </mock-box>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-4 MuiGrid-justify-xs-space-between"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
        >
          <div
            class="ReefDetails-container-39"
          >
            <mock-map
              polygon="[object Object]"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
        >
          <div
            class="ReefDetails-container-39"
          >
            <mock-featuredmedia />
          </div>
        </div>
      </div>
    </mock-box>
  </div>
  <mock-appbar
    classname="Footer-appBar-42"
    position="static"
  >
    <mock-toolbar>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-center"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-10"
        >
          <mock-link
            classname="Footer-navBarLink-43"
            href="/"
          >
            <mock-typography
              color="textPrimary"
              variant="h4"
            >
              Aqua
            </mock-typography>
            <mock-typography
              style="color: rgb(138, 198, 222);"
              variant="h4"
            >
              link
            </mock-typography>
          </mock-link>
        </div>
      </div>
    </mock-toolbar>
  </mock-appbar>
</div>
`;
